waybar: remove audio source of muted sink infomation
Signed-off-by: Tetramad <cbwjd777@gmail.com>

--- a/waybar/config
+++ b/waybar/config
@@ -36,7 +36,7 @@
     },
     "pulseaudio#sink": {
         "format": "{icon}{volume}%",
-        "format-muted": "🔈❌ {format_source}",
+        "format-muted": "🔈❌",
         "format-icons": {
             "default": ["🔈", "🔉", "🔉", "🔊"]
         },
