--- a/sway/config
+++ b/sway/config
@@ -210,6 +210,9 @@ focus_follows_mouse no
 focus_on_window_activation urgent
 focus_wrapping yes
 
+# For window setting
+for_window [app_id="org.kde.kdeconnect.daemon"] floating enable
+
 include /etc/sway/config.d/*
 
 ### Startup Command
